# zdf-download

./: .gitignore  .releaserc  Dockerfile  app.py  configuration.py  history.py  pyproject.toml  readme.md  requirements.txt  sonar-project.properties  zdf_client.py  zdf_download.py
.github/workflows/: build-container.yaml  quality.yaml  release.yaml
configuration/: configuration-example.yaml
