[project]
name = "zdf-download"
version = "0.1.0"
description = "Automatically download new episodes of shows from the ZDF Mediathek "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]
